# viralclipai

./: .docker-build.sh  .dockerignore  .env.api.dev.example  .env.api.example  .env.example  .firebaserc  .gitignore  DEPLOYMENT_INSTRUCTIONS.md  DOCKER.md  DOCKER_OPTIMIZATION.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.opencv-builder  Dockerfile.rust  Makefile  PLAN_CUT_SILENT_PARTS.md  QUICKSTART.md  README.md  YUNET_SETUP.md  app.py  clipper.py  docker-compose.backend.yml  docker-compose.dev.rust.yml  docker-compose.dev.yml  docker-compose.rust.yml  docker-compose.yml  download-yunet-models.sh  firestore.indexes.json  firestore.rules  gemini_client.py  highlights.json  package-lock.json  package.json  prompt.txt  promptv2.txt  r2-setup.md  requirements.txt  tsconfig.json
backend/: .gitignore  ARCHITECTURE_MIGRATION.md  Cargo.toml
backend/crates/vclip-api/: Cargo.toml
backend/crates/vclip-api/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  routes.rs  security.rs  state.rs  ws.rs
backend/crates/vclip-api/src/handlers/: admin.rs  analysis.rs  clip_delivery.rs  credits.rs  highlights.rs  jobs.rs  settings.rs  storage.rs  video_status.rs  videos.rs
backend/crates/vclip-api/src/services/: credit.rs  gemini.rs  mod.rs  stale_job_detector.rs  user.rs
backend/crates/vclip-firestore/: Cargo.toml
backend/crates/vclip-firestore/src/: analysis_draft_repo.rs  client.rs  client_tests.rs  credit_transaction_repo.rs  error.rs  highlights_repo.rs  lib.rs  metrics.rs  repos.rs  retry.rs  share_repo.rs  sorting.rs  storage_accounting.rs  token_cache.rs  types.rs  user_credits.rs
backend/crates/vclip-media/: Cargo.toml
backend/crates/vclip-media/benches/: face_detection.rs
backend/crates/vclip-media/src/: clip.rs  command.rs  download.rs  error.rs  filters.rs  fs_utils.rs  ipv6_rotation.rs  lib.rs  probe.rs  watermark.rs
backend/crates/vclip-media/src/core/: mod.rs  progress.rs
backend/crates/vclip-media/src/detection/: mod.rs  object_detector.rs  pipeline.rs  pipeline_builder.rs  providers.rs
backend/crates/vclip-media/src/intelligent/: activity_scorer.rs  avframe_view.rs  backend.rs  camera_constraints.rs  config.rs  continuous_renderer.rs  cpu_features.rs  crop_planner.rs  detection_adapter.rs  detector.rs  enhanced_smoother.rs  face_activity.rs  face_engine.rs  face_landmarks.rs  face_mesh.rs  face_timeline.rs  fast_split.rs  frame_converter.rs  kalman_tracker.rs  layout_detector.rs  letterbox.rs  mapping.rs  mod.rs  model_config.rs  models.rs  motion.rs  optimized_detector.rs  output_format.rs  renderer.rs  scene_cut.rs  segment_analysis.rs  single_pass_renderer.rs  smoother.rs  smoothing_utils.rs  speaker_detector.rs  split.rs  split_evaluator.rs  split_renderer.rs  stacking.rs  temporal.rs  (+8 more)
backend/crates/vclip-media/src/silence_removal/: analyze.rs  apply.rs  config.rs  mod.rs  segmenter.rs  vad.rs
backend/crates/vclip-media/src/styles/: center_focus.rs  intelligent.rs  intelligent_cinematic.rs  intelligent_split.rs  intelligent_split_activity.rs  left_focus.rs  mod.rs  original.rs  right_focus.rs  split.rs  split_fast.rs  (+1 more)
backend/crates/vclip-ml-client/src/: client.rs  error.rs  types.rs
backend/crates/vclip-models/: Cargo.toml
backend/crates/vclip-models/examples/: youtube_url_demo.rs
backend/crates/vclip-models/src/: analysis.rs  cinematic_analysis.rs  clip.rs  credit_cost.rs  credit_transaction.rs  detection_tier.rs  encoding.rs  highlight.rs  job.rs  job_status.rs  lib.rs  neural_analysis.rs  plan.rs  rect.rs  share.rs  style.rs  timestamp.rs  utils.rs  video.rs  ws.rs  youtube_url_config.rs
backend/crates/vclip-queue/: Cargo.toml
backend/crates/vclip-queue/src/: job.rs  lib.rs  progress.rs  queue.rs
backend/crates/vclip-storage/: Cargo.toml
backend/crates/vclip-storage/src/: client.rs  delivery.rs  error.rs  lib.rs  neural_cache.rs  operations.rs  transcript_cache.rs
backend/crates/vclip-worker/: Cargo.toml
backend/crates/vclip-worker/src/: cinematic_analysis.rs  cinematic_signals.rs  config.rs  credits.rs  download_coordinator.rs  download_source_job.rs  error.rs  executor.rs  gemini.rs  lib.rs  logging.rs  main.rs  neural_analysis_job.rs  neural_cache.rs  processor.rs  processor_refactored.rs  raw_segment_cache.rs  render_job.rs  reprocessing.rs  retry.rs  scene_analysis.rs  scene_renderer.rs  silence_cache.rs  source_download.rs  source_video_coordinator.rs  top_scenes.rs  transcript.rs  user_plan.rs  watermark_check.rs
backend/docs/: cinematic-pipeline.md
backend/models/: README.md
backend/models/face_detection/: README.md
backend/models/face_detection/yunet/: face_detection_yunet_2022mar.onnx
backend/models/face_mesh/: README.md  download-face-mesh.sh
backend/models/object_detection/: .gitkeep  README.md
backend/scripts/: migrate-users-to-credits.js  migrate-users-to-credits.sh
backend/tests/integration/: api_tests.rs  firestore_tests.rs
backend/tools/: eslint.config.js  package-lock.json  package.json  tsconfig.json
backend/tools/transcript-extractor/: cli.ts  index.ts  youtubei-transcript.mjs
backend/tools/transcript-extractor/po-token/: client.ts  config.ts  index.ts  metrics.ts  service.ts  types.ts
backend/tools/transcript-extractor/service/: index.ts  transcript-service.ts
backend/tools/transcript-extractor/strategies/: apify-strategy.ts  apify-types.ts  base.ts  index.ts  watch-page-client.ts  watch-page-strategy.ts  watch-page-types.ts  youtube-api-strategy.ts  youtubei-strategy.ts  ytdlp-strategy.ts
backend/tools/transcript-extractor/types/: index.ts
backend/tools/transcript-extractor/utils/: circuit-breaker.ts  config.ts  health-check.ts  index.ts  ipv6-selector.ts  logger.ts  memory.ts  srt-parser.ts  video-id.ts  vtt-parser.ts  youtube-url-parser.ts
rust-backend/crates/vclip-api/: Cargo.toml
rust-backend/crates/vclip-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  routes.rs  state.rs  ws.rs
rust-backend/crates/vclip-ml-client/: Cargo.toml
rust-backend/crates/vclip-ml-client/src/: lib.rs
web/: .npmrc  (+19 more)
(+429 files in other folders)
