[package]
name = "vclip-firestore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Firestore REST API client"

[dependencies]
vclip-models = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
gcp_auth = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
