[package]
name = "vclip-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FFmpeg CLI wrapper for video processing"

[dependencies]
vclip-models = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
