[package]
name = "vclip-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared data models for ViralClip backend"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
