[package]
name = "vclip-queue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Redis Streams job queue with Apalis"

[dependencies]
vclip-models = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
