[package]
name = "vclip-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cloudflare R2 storage client"

[dependencies]
vclip-models = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
aws-types = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
