[package]
name = "vclip-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cloudflare R2 storage client"

[dependencies]
vclip-models = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }

# AWS SDK (for R2)
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
aws-types = { workspace = true }

# Delivery token signing
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
