[package]
name = "vclip-ml-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Client for Python ML service (intelligent cropping)"

[dependencies]
vclip-models = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
